[package]
name = "pwned-passwords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
reqwest = "0.11.14"
sha1 = "0.10.5"
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
